<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_bg_1"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="?attr/theme_color_1"
        android:textSize="@dimen/text_1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="75dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="?attr/theme_color_1"
            android:textSize="@dimen/text_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="75dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="?attr/theme_color_1"
            android:textSize="@dimen/text_1"
            app:layout_constraintRight_toLeftOf="@+id/tvConfirm"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
