<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.zziafyc.wanandroid_jetpack.ui.main.mine.MineVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/main_bg_1"
        android:overScrollMode="never"
        tools:context=".ui.main.mine.MineFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_mine_head"
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_75"
                android:layout_marginStart="@dimen/set_padding"
                android:layout_marginTop="@dimen/dp_50"
                android:scaleType="centerCrop"
                android:src="@mipmap/head"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_mine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_30"
                android:hint="zziafyc"
                android:text="@{vm.username}"
                android:textColor="?attr/theme_color_1"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_mine_head"
                app:layout_constraintLeft_toRightOf="@+id/iv_mine_head" />

            <LinearLayout
                android:id="@+id/ll_mine_history"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_bg"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ll_mine_ranking"
                app:layout_constraintTop_toBottomOf="@+id/iv_mine_head">

                <TextView
                    android:id="@+id/tv_mine_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="?attr/theme_color_1"
                    android:textSize="@dimen/text_1"
                    android:textStyle="bold" />

                <TextView
                    style="@style/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="足迹" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mine_ranking"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_bg"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@+id/ll_mine_history"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ll_mine_history">

                <TextView
                    android:id="@+id/tv_mine_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.rank}"
                    android:textColor="?attr/theme_color_1"
                    android:textSize="@dimen/text_1"
                    android:textStyle="bold" />

                <TextView
                    style="@style/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="?attr/division_line"
                app:layout_constraintTop_toBottomOf="@+id/ll_mine_ranking" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_mine_integral"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ripple_bg"
                android:paddingLeft="@dimen/set_padding"
                android:paddingRight="@dimen/set_padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_mine_ranking">

                <ImageView
                    android:layout_width="@dimen/dp_27"
                    android:layout_height="@dimen/dp_27"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/integral"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_40"
                    android:text="@string/myIntegral"
                    android:textStyle="bold"
                    app:drawableEndCompat="@mipmap/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvIntegral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:text="@{vm.internal}"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_2"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="6dp"
                    android:text="@string/currentIntegral"
                    android:textColor="?attr/theme_color_2"
                    android:textSize="@dimen/text_2"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/tvIntegral"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_mine_Collect"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/ripple_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/set_padding"
                android:paddingRight="@dimen/set_padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_mine_integral">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@mipmap/collect"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:drawableRight="@mipmap/arrow_right"
                    android:text="@string/myCollection"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_mine_article"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/ripple_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/set_padding"
                android:paddingRight="@dimen/set_padding"
                app:layout_constraintTop_toBottomOf="@+id/cl_mine_Collect">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_centerVertical="true"
                    android:padding="2dp"
                    android:src="@mipmap/my_article"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:text="@string/myArticle"
                    android:textStyle="bold"
                    app:drawableEndCompat="@mipmap/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="?attr/division_line"
                app:layout_constraintTop_toBottomOf="@+id/cl_mine_article" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_mine_website"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ripple_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/set_padding"
                android:paddingRight="@dimen/set_padding"
                app:layout_constraintTop_toBottomOf="@+id/cl_mine_article">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_centerVertical="true"
                    android:padding="2dp"
                    android:src="@mipmap/website"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:text="@string/netSite"
                    android:textStyle="bold"
                    app:drawableEndCompat="@mipmap/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_mine_settings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/ripple_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/set_padding"
                android:paddingRight="@dimen/set_padding"
                app:layout_constraintTop_toBottomOf="@+id/cl_mine_website">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/settings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_mine_setting"
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:text="@string/settings"
                    android:textStyle="bold"
                    app:drawableEndCompat="@mipmap/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>